<resources>
    <string name="app_name">PRM392</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_signing_in">Get help signing in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="phone">phone number</string>
    <string name="address">address</string>
    <string name="have_account_already">Have account ready?</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="my_cart">My Cart</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="customerdetail">CustomerDetail</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_activity">Customer Activity</string>
    <string name="activity_title">Activity Title</string>
    <string name="activity_description">Activity Description</string>
    <string name="checkout">CheckOut</string>
    <string name="customer">Customer</string>
    <string name="no_customer_yet">No Customer yet</string>
    <string name="custorme_name">Customer_Name</string>
    <string name="Username">Username:</string>
    <string name="Phone">Phone:</string>
    <string name="Address">Address:</string>
    <string name="create_at">Create At:</string>
    <string name="change_shipping_address">Change shipping address</string>
    <string name="update_status">Update Status</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="order_date">Order Date:</string>
    <string name="shipping_address">Shipping address</string>
    <string name="click_detail_to_see_more">Click \'Detail\' to see more</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="see_all">See all</string>
    <string name="notification">notification</string>
    <string name="explorer">Explorer</string>
    <string name="cart">Cart</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_order">My order</string>
    <string name="profile">Profile</string>
    <string name="priceIcon">$-</string>
    <string name="brand_image">Brand Image</string>
    <string name="action_back">Action back</string>
    <string name="profile_image">Profile Image</string>
    <string name="Role">Role:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="has_account_already">Has account already?</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-Password</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="image_of_customer">Image of customer</string>
    <string name="join_at">Join At:</string>
    <string name="policy">Policy</string>
    <string name="price">Price</string>
    <string name="total_price">Total price:</string>
    <string name="_120">120</string>
    <string name="_60">60</string>
    <string name="x2">x2</string>
    <string name="brand">Brand</string>
    <string name="shoecolor">ShoeColor</string>
    <string name="shoe_name">Shoe name</string>
    <string name="coupon">Coupon:</string>
    <string name="_2_products">2 products</string>
    <string name="total_120">Total: 120</string>
    <string name="address_ha_noi">Address: Ha Noi</string>
    <string name="completed">Completed</string>
    <string name="detail">Detail</string>
    <string name="amount">amount</string>
    <string name="price_number">price_number</string>
    <string name="total_price_number">Total Price Number</string>
    <string name="order_is_completed">Order is completed</string>
    <string name="phone_number">phone number</string>
    <string name="change_shipping_detail">Change Shipping Detail</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="pending">Pending</string>
    <string name="processing">Processing</string>
    <string name="shipping">Shipping</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
</resources>