<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sizeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/igfont"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_gravity="bottom|center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#B2EBF2" />

        <Button
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset_password"
            android:textColor="#D7CCC8"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom|center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_account_already"
            android:textSize="18sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#D7CCC8"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>