<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sizeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="bottom|center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:fontFamily="@font/igfont"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="55sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="10"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#B2EBF2" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#B2EBF2" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#B2EBF2" />

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:textColorHint="#B2EBF2" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="#EDE7F6"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/have_account_already"
            android:textColor="#FFEBEE"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="#D7CCC8"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>